# perhitunganRobotKrsbi

./: CMakeLists.txt  main.cpp
gui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h
gui/InputWidget/: CMakeLists.txt  InputWidget.cpp  InputWidget.h
gui/InputWidget/AngkaInputWidget/: AngkaInputWidget.cpp  AngkaInputWidget.h  CMakeLists.txt
kinematikaBalik/: CMakeLists.txt  KinematikaBalik.cpp  KinematikaBalik.h
